--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>數神 MathGod</title>
+    <title>數神 MathGod － 香港人的夾錢APP</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
@@ -19,12 +19,16 @@
         .tab-inactive { background-color: #2d2d2d; color: #6b7280; }
         .whatsapp-bg { background-color: #25D366; color: white; }
 
-        /* 核心修復：增加寬度緩衝，防止中文字被切斷 */
-        .fix-render { 
-            line-height: 1.5 !important; 
-            padding-right: 4px !important; 
-            display: inline-block !important;
-            vertical-align: middle;
+        /* 核心修復：縮小支付者名稱，並增加兩側緩衝 padding */
+        .payer-name-fix { 
+            font-size: 9px !important; /* 稍微縮細一點 */
+            letter-spacing: 0.5px;
+            padding: 0 4px; /* 增加左右間距，確保 cap 圖不切字 */
+            display: inline-block;
+        }
+        .item-name-fix {
+            padding-right: 4px;
+            display: inline-block;
         }
     </style>
 </head>
@@ -66,9 +70,9 @@
                 <div class="space-y-3">
                     <div v-for="(s, i) in settlements" :key="i" class="bg-black/40 border border-white/5 flex items-center justify-between p-4 rounded-2xl">
                         <div class="flex items-center gap-3">
-                            <span class="text-rose-400 font-black text-sm fix-render">{{ s.from }}</span>
+                            <span class="text-rose-400 font-black text-sm">{{ s.from }}</span>
                             <i class="fas fa-arrow-right text-[10px] text-gray-700"></i>
-                            <span class="text-emerald-500 font-black text-sm fix-render">{{ s.to }}</span>
+                            <span class="text-emerald-500 font-black text-sm">{{ s.to }}</span>
                         </div>
                         <span class="font-mono text-xl text-emerald-500 font-black italic">HK${{ s.amount.toFixed(1) }}</span>
                     </div>
@@ -76,11 +80,12 @@
             </section>
 
             <div v-if="expenses.length > 0" class="space-y-3">
-                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
+                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 relative shadow-sm">
                     <div class="flex-1 min-w-0 mr-4">
-                        <div class="font-black text-sm text-gray-200 truncate fix-render">{{ exp.item }}</div>
+                        <div class="font-black text-sm text-gray-200 truncate item-name-fix">{{ exp.item }}</div>
                         <div class="text-[10px] text-gray-500 mt-1">
-                            <b class="text-emerald-600 uppercase fix-render">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}
+                            <b class="text-emerald-600 uppercase payer-name-fix">{{ exp.payer }}</b> 
+                            <span class="opacity-80">付 {{ exp.currency }} {{ exp.amount }}</span>
                         </div>
                     </div>
                     <div class="text-right flex items-center gap-4">
@@ -103,18 +108,19 @@
                         <option value="JPY">🇯🇵 JPY</option>
                         <option value="TWD">🇹🇼 TWD</option>
                         <option value="CNY">🇨🇳 CNY</option>
+                        <option value="THB">🇹🇭 THB</option>
                     </select>
-                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold">
+                    <input v-model.number="form.amount" type="number" placeholder="金額" class="input-bg flex-1 p-4 rounded-2xl text-sm text-right font-mono font-bold outline-none">
                 </div>
                 <div class="grid grid-cols-2 gap-4">
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰付款？</label>
+                        <label class="text-[10px] font-bold text-gray-500">誰付款？</label>
                         <select v-model="form.payer" class="input-bg w-full p-3 rounded-2xl text-sm outline-none">
                             <option v-for="u in users" :key="u" :value="u">{{ u }}</option>
                         </select>
                     </div>
                     <div class="space-y-2">
-                        <label class="text-[10px] font-bold text-gray-500 ml-1">誰參與？</label>
+                        <label class="text-[10px] font-bold text-gray-500">誰參與？</label>
                         <div class="input-bg max-h-32 overflow-y-auto rounded-2xl p-3 text-[10px]">
                             <div v-for="u in users" :key="u" class="flex items-center gap-3 mb-2">
                                 <input type="checkbox" :value="u" v-model="form.involved" class="w-4 h-4 rounded accent-emerald-500">
@@ -129,12 +135,23 @@
             </div>
         </section>
 
+        <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
+            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl">
+                <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
+                <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono" v-model="shareMessage"></textarea>
+                <div class="grid grid-cols-2 gap-3">
+                    <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold">複製文字</button>
+                    <button @click="shareWhatsApp" class="whatsapp-bg py-4 rounded-2xl text-xs font-bold">WhatsApp</button>
+                </div>
+            </div>
+        </div>
+
         <div v-if="previewImg" class="fixed inset-0 bg-black/85 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
-            <div class="w-full max-w-sm flex flex-col items-center">
+            <div class="w-full max-w-sm flex flex-col items-center px-4">
                 <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
                 <div class="grid grid-cols-2 gap-4 w-full">
-                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold">下載圖片</button>
-                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg">分享圖片</button>
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-[10px] font-bold uppercase">下載圖片</button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-[10px] font-bold shadow-lg uppercase">分享圖片</button>
                 </div>
                 <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
             </div>
@@ -157,11 +174,7 @@ createApp({
 
         const fetchRate = async () => {
             if(form.value.currency === 'HKD') { currentRate.value = 1; return; }
-            try {
-                const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`);
-                const data = await res.json();
-                currentRate.value = data.rates.HKD || 1;
-            } catch (e) { currentRate.value = 1; }
+            try { const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`); const data = await res.json(); currentRate.value = data.rates.HKD || 1; } catch (e) { currentRate.value = 1; }
         };
 
         const addUser = () => {
@@ -175,21 +188,14 @@ createApp({
             form.value.item = ""; form.value.amount = "";
         };
 
-        const startEdit = (i) => {
-            isEditing.value = true; editIndex.value = i;
-            form.value = JSON.parse(JSON.stringify(expenses.value[i]));
-        };
-
-        const saveEdit = () => {
-            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value };
-            isEditing.value = false; form.value.item = ""; form.value.amount = "";
-        };
+        const startEdit = (i) => { isEditing.value = true; editIndex.value = i; form.value = JSON.parse(JSON.stringify(expenses.value[i])); };
+        const saveEdit = () => { expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value }; isEditing.value = false; form.value.item = ""; form.value.amount = ""; };
 
         const generateImage = async () => {
             isExporting.value = true;
             setTimeout(async () => {
-                const element = document.getElementById('capture-zone');
                 try {
+                    const element = document.getElementById('capture-zone');
                     const canvas = await html2canvas(element, { backgroundColor: '#121212', scale: 2, useCORS: true });
                     previewImg.value = canvas.toDataURL('image/png');
                 } catch (err) { alert("截圖失敗"); }
@@ -198,13 +204,10 @@ createApp({
         };
 
         const downloadImage = () => { const link = document.createElement('a'); link.download = `MathGod.png`; link.href = previewImg.value; link.click(); };
-        const shareImage = async () => {
-            const res = await fetch(previewImg.value); const blob = await res.blob();
-            const file = new File([blob], 'settlement.png', { type: 'image/png' });
-            if (navigator.share) await navigator.share({ files: [file] });
-        };
-
+        const shareImage = async () => { try { const res = await fetch(previewImg.value); const blob = await res.blob(); const file = new File([blob], 'settlement.png', { type: 'image/png' }); if (navigator.share) await navigator.share({ files: [file] }); } catch(e) {} };
         const clearAll = () => { if(confirm("確定清空紀錄？")) expenses.value = []; };
+        const copyText = () => { navigator.clipboard.writeText(shareMessage.value); alert("已複製！"); };
+        const shareWhatsApp = () => { window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`); };
 
         const settlements = computed(() => {
             let balances = {}; users.value.forEach(u => balances[u] = 0);
@@ -242,11 +245,9 @@ createApp({
 
         return { 
             users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage,
-            addUser, addExpense, startEdit, saveEdit, clearAll, generateImage, downloadImage, shareImage, settlements,
+            addUser, addExpense, startEdit, saveEdit, clearAll, copyText, shareWhatsApp, generateImage, downloadImage, shareImage, settlements,
             totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
-            fetchRate, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1),
-            copyText:()=>{navigator.clipboard.writeText(shareMessage.value); alert("已複製！")},
-            shareWhatsApp:()=>window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`)
+            fetchRate, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1)
         };
     }
 }).mount('#app');
